# rfq-parser

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
ds-qlp/: BENCHMARK_REPORT.md  Cargo.toml  README.md  qlp_corpus.jsonl
ds-qlp-py/: Cargo.toml  pyproject.toml
ds-qlp-py/src/: lib.rs
ds-qlp-rfq/: BENCHMARK_REPORT.md  Cargo.toml
ds-qlp-rfq/benches/: qlp_rfq_bench.rs
ds-qlp-rfq/src/: item_normalizer.rs  lib.rs  main.rs  segmenter.rs
ds-qlp/benches/: qlp_bench.rs
ds-qlp/src/: lexer.rs  lib.rs  main.rs  ontology.rs  token.rs
qlp/: BENCHMARK_REPORT.md  Cargo.toml  README.md
qlp-py/: Cargo.toml  LICENSE  README.md  pyproject.toml
qlp-py/src/: lib.rs
qlp/benches/: qlp_bench.rs
qlp/src/: dsl.rs  lexer.rs  lib.rs  main.rs  ontology.rs  parser.rs  token.rs
rfqlp/: BENCHMARK_REPORT.md  Cargo.toml
rfqlp/benches/: qlp_rfq_bench.rs
rfqlp/src/: item_normalizer.rs  lib.rs  main.rs  trade_terms.rs
