[package]
name = "ds_qlp_rfq"
version = "0.1.0"
edition = "2021"
description = "DS-RFQ — RFQ document parser for Arobid Deep Search"
authors = ["josephdinh", "Arobid"]

[lib]
name = "ds_qlp_rfq"
crate-type = ["cdylib", "rlib"]

[dependencies]
ds_qlp = { path = "../ds-qlp" }
regex = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "qlp_rfq_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
