[package]
name = "ds_qlp"
version = "0.1.0"
edition = "2021"
description = "DS-QLP — Deep Search Query Lexer-Parser for Arobid"
authors = ["josephdinh", "Arobid"]

[lib]
name = "ds_qlp"
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1"
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }

[features]
python = ["pyo3"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "qlp_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
