[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "rfq-parser"
version = "0.1.1"
description = "Pure syntagmatic rule-based parser for English RFQ documents (Vietnamese mode included) — LLM pre-processing layer for product name and spec extraction"
authors = [{ name = "progdinh", email = "giordanodinh@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["rfq", "procurement", "parser", "product-query", "nlp", "b2b", "vietnamese", "llm-preprocessing", "syntagmatic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/progdinh/rfq-parser"
Repository = "https://github.com/progdinh/rfq-parser"
Issues = "https://github.com/progdinh/rfq-parser/issues"

[tool.maturin]
features = []
