[package]
name = "qlp"
version = "0.1.0"
edition = "2021"
description = "Rule-based query lexer-parser for product queries and RFQ documents"
authors = ["progdinh"]

[lib]
name = "qlp"
crate-type = ["rlib"]

[dependencies]
regex = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "qlp_bench"
harness = false

