[package]
name = "rfqlp"
version = "0.1.0"
edition = "2021"
description = "RFQ document segmenter and item normalizer"
authors = ["progdinh"]

[lib]
name = "rfqlp"
crate-type = ["cdylib", "rlib"]

[dependencies]
qlp = { path = "../qlp" }
regex = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "qlp_rfq_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
